@@ -5,6 +5,7 @@ DIST cppcheck-1.41.tar.bz2 473492 RMD160 1ac43e5fc2b7de9d9dd7667955275268dea2d81
 EBUILD cppcheck-1.38.ebuild 651 RMD160 bce607900c272d463997c875149661a69f12d1d5 SHA1 035b8845d4a17e90735ba340d00e6b1728b1d235 SHA256 e28ef91c6a9604248d6e44a104bef4f4a5562eb8860eb14bb57fbf9becb228ac
 EBUILD cppcheck-1.39.ebuild 649 RMD160 6e4061fc408a4645080cf5d4d5155ccbfeb8e071 SHA1 84a8be04a53aa0912ceb0a6b51b80eb7c48084ad SHA256 13497d8f2917ba4825c7999473e73153079c3d41e12a92ba5f2610147abaa2f3
 EBUILD cppcheck-1.40.ebuild 649 RMD160 9dbb74242fb5185a5e09bbaa359f2c7463c00055 SHA1 7c621acae241f715def82534d51e749e4d9bf0e9 SHA256 31b4f1c709eb84df58cb0bd7ae78f291443f2d316c84a5e066afd19d95be61b2
+EBUILD cppcheck-1.41-r1.ebuild 1012 RMD160 d92d0a9598435537106dd449dce7fe1f5e635d4f SHA1 b6220550a06500e19003685d16fd1f792c1bf255 SHA256 4ca174e1599600d3407e313ebfe5c1d0f6f00779a19287dae6c4a085a737def5
 EBUILD cppcheck-1.41.ebuild 649 RMD160 59d8faa4cffcbbec5079198c4d2120f0ff35c6bd SHA1 4554b014f00e061c686c9d537edb18551b4fb3ad SHA256 b087c912a16d420c8533bf1db7cda5f1823ba203a1e4c74511379b2965274889
-MISC ChangeLog 1762 RMD160 3307c25625ef8bea31f8013b5e05ae90e2f47f6b SHA1 907a413f2fd77a92b965193badcb38cf955eb77a SHA256 868506b2145bee7de2fe1e198b7786aa6d7629df0b03c5fe0567a91dfff08f92
+MISC ChangeLog 1954 RMD160 7ba00d22a37447812ee7b5d7e57b9871e0b68207 SHA1 c20583d0b4915dd411ec0d25f219e7869d48961f SHA256 bfc6925821654c0cf7800fc8e8fce8d5ccdfa4cb08ef37d999e4f392d0df830b
 MISC metadata.xml 336 RMD160 a4f067e0042b5e08b034cfdbfa4c36dad2dc0029 SHA1 463103825d27a8a03256ea9fff4aea00f3304a03 SHA256 e3f52af28c24b62dbd4675f242fecd5b0f725b60632b5aa360cd7d2fab2b1a1d
